[package]
name = "cita-bft"
version = "1.0.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
dotenv = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.8.0"

cita-logger = "0.1.1"
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
clap = "2"
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
hashable = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-directories = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
time = "0.1.36"
engine = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
lru-cache = "0.1"
cpuprofiler = "0.0.3"
authority_manage = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
rustc-hex = "1.0"
min-max-heap = "1.2.2"

[build-dependencies]
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }


[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "proof/secp256k1","engine/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519", "proof/ed25519", "engine/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2", "proof/sm2", "engine/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash", "proof/sha3hash", "engine/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "libproto/blake2bhash", "proof/blake2bhash", "engine/blake2bhash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash", "proof/sm3hash", "engine/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
